Apply CMS GC for tests